chore(deps): bump https://github.com/jx-app-org/skilled-ape.git
Command run was `jx create quickstart -b -o /var/folders/s2/mtpjlcln1qlf4_p56_9rmj7r0000gn/T/e2e-918172935 --org jx-app-org -p skilled-ape -f golang-http --git-public true`

--- a/dependency-matrix/matrix.yaml
+++ b/dependency-matrix/matrix.yaml
@@ -1,7 +1,7 @@
 dependencies:
 - host: github.com
   owner: jx-app-org
-  repo: more-goldfish
-  url: https://github.com/jx-app-org/more-goldfish.git
+  repo: skilled-ape
+  url: https://github.com/jx-app-org/skilled-ape.git
   version: ""
   versionURL: ""
