chore(deps): bump https://github.com/jx-app-org/sensible-skylark.git
Command run was `jx create quickstart -b -o /var/folders/s2/mtpjlcln1qlf4_p56_9rmj7r0000gn/T/e2e-790643870 --org jx-app-org -p sensible-skylark -f golang-http --git-public true`

--- a/dependency-matrix/matrix.yaml
+++ b/dependency-matrix/matrix.yaml
@@ -5,3 +5,9 @@ dependencies:
   url: https://github.com/jx-app-org/skilled-ape.git
   version: ""
   versionURL: ""
+- host: github.com
+  owner: jx-app-org
+  repo: sensible-skylark
+  url: https://github.com/jx-app-org/sensible-skylark.git
+  version: ""
+  versionURL: ""
