chore(deps): bump https://github.com/jx-app-org/enhanced-ferret.git
Command run was `jx create quickstart -b -o /var/folders/s2/mtpjlcln1qlf4_p56_9rmj7r0000gn/T/e2e-108923732 --org jx-app-org -p enhanced-ferret -f golang-http --git-public true`

--- a/dependency-matrix/matrix.yaml
+++ b/dependency-matrix/matrix.yaml
@@ -11,3 +11,9 @@ dependencies:
   url: https://github.com/jx-app-org/sensible-skylark.git
   version: ""
   versionURL: ""
+- host: github.com
+  owner: jx-app-org
+  repo: enhanced-ferret
+  url: https://github.com/jx-app-org/enhanced-ferret.git
+  version: ""
+  versionURL: ""
