chore(deps): bump https://github.com/jx-app-org/known-cub.git
Command run was `jx create quickstart -b -o /var/folders/s2/mtpjlcln1qlf4_p56_9rmj7r0000gn/T/e2e-458795665 --org jx-app-org -p known-cub -f golang-http --git-public true`

--- a/dependency-matrix/matrix.yaml
+++ b/dependency-matrix/matrix.yaml
@@ -17,3 +17,9 @@ dependencies:
   url: https://github.com/jx-app-org/enhanced-ferret.git
   version: ""
   versionURL: ""
+- host: github.com
+  owner: jx-app-org
+  repo: known-cub
+  url: https://github.com/jx-app-org/known-cub.git
+  version: ""
+  versionURL: ""
