chore: disable vault

--- a/jx-requirements.yml
+++ b/jx-requirements.yml
@@ -54,7 +54,7 @@ ingress:
     production: false
 kaniko: true
 repository: nexus
-secretStorage: vault
+secretStorage: kube
 storage:
   backup:
     enabled: false
