chore(deps): bump https://github.com/jx-app-org/glowing-hornet.git
Command run was `jx create quickstart -b -o /var/folders/s2/mtpjlcln1qlf4_p56_9rmj7r0000gn/T/e2e-123654542 --org jx-app-org -p glowing-hornet -f golang-http --git-public true`

--- a/dependency-matrix/matrix.yaml
+++ b/dependency-matrix/matrix.yaml
@@ -23,3 +23,9 @@ dependencies:
   url: https://github.com/jx-app-org/known-cub.git
   version: ""
   versionURL: ""
+- host: github.com
+  owner: jx-app-org
+  repo: glowing-hornet
+  url: https://github.com/jx-app-org/glowing-hornet.git
+  version: ""
+  versionURL: ""
