chore(deps): bump https://github.com/jx-app-org/patient-elk.git
Command run was `jx create quickstart -b -o /var/folders/s2/mtpjlcln1qlf4_p56_9rmj7r0000gn/T/e2e-708935398 --org jx-app-org -p patient-elk -f golang-http --git-public true`

--- a/dependency-matrix/matrix.yaml
+++ b/dependency-matrix/matrix.yaml
@@ -25,7 +25,7 @@ dependencies:
   versionURL: ""
 - host: github.com
   owner: jx-app-org
-  repo: glowing-hornet
-  url: https://github.com/jx-app-org/glowing-hornet.git
+  repo: patient-elk
+  url: https://github.com/jx-app-org/patient-elk.git
   version: ""
   versionURL: ""
