--- a/dependency-matrix/matrix.yaml
+++ b/dependency-matrix/matrix.yaml
@@ -25,7 +25,7 @@ dependencies:
   versionURL: ""
 - host: github.com
   owner: jx-app-org
-  repo: patient-elk
-  url: https://github.com/jx-app-org/patient-elk.git
+  repo: distinct-lemur
+  url: https://github.com/jx-app-org/distinct-lemur.git
   version: ""
   versionURL: ""
