chore(deps): bump https://github.com/jx-app-org/singular-hyena.git
Command run was `jx create quickstart -b -o /var/folders/s2/mtpjlcln1qlf4_p56_9rmj7r0000gn/T/e2e-285459276 --org jx-app-org -p singular-hyena -f golang-http --git-public true`

--- a/dependency-matrix/matrix.yaml
+++ b/dependency-matrix/matrix.yaml
@@ -25,7 +25,7 @@ dependencies:
   versionURL: ""
 - host: github.com
   owner: jx-app-org
-  repo: distinct-lemur
-  url: https://github.com/jx-app-org/distinct-lemur.git
+  repo: singular-hyena
+  url: https://github.com/jx-app-org/singular-hyena.git
   version: ""
   versionURL: ""
