--- a/dependency-matrix/matrix.yaml
+++ b/dependency-matrix/matrix.yaml
@@ -25,7 +25,7 @@ dependencies:
   versionURL: ""
 - host: github.com
   owner: jx-app-org
-  repo: singular-hyena
-  url: https://github.com/jx-app-org/singular-hyena.git
+  repo: noted-koi
+  url: https://github.com/jx-app-org/noted-koi.git
   version: ""
   versionURL: ""
