--- a/dependency-matrix/matrix.yaml
+++ b/dependency-matrix/matrix.yaml
@@ -25,7 +25,7 @@ dependencies:
   versionURL: ""
 - host: github.com
   owner: jx-app-org
-  repo: noted-koi
-  url: https://github.com/jx-app-org/noted-koi.git
+  repo: poetic-fly
+  url: https://github.com/jx-app-org/poetic-fly.git
   version: ""
   versionURL: ""
