--- a/dependency-matrix/matrix.yaml
+++ b/dependency-matrix/matrix.yaml
@@ -25,7 +25,7 @@ dependencies:
   versionURL: ""
 - host: github.com
   owner: jx-app-org
-  repo: poetic-fly
-  url: https://github.com/jx-app-org/poetic-fly.git
+  repo: innocent-mullet
+  url: https://github.com/jx-app-org/innocent-mullet.git
   version: ""
   versionURL: ""
