--- a/dependency-matrix/matrix.yaml
+++ b/dependency-matrix/matrix.yaml
@@ -25,7 +25,7 @@ dependencies:
   versionURL: ""
 - host: github.com
   owner: jx-app-org
-  repo: innocent-mullet
-  url: https://github.com/jx-app-org/innocent-mullet.git
+  repo: composed-grackle
+  url: https://github.com/jx-app-org/composed-grackle.git
   version: ""
   versionURL: ""
