--- a/dependency-matrix/matrix.yaml
+++ b/dependency-matrix/matrix.yaml
@@ -25,7 +25,7 @@ dependencies:
   versionURL: ""
 - host: github.com
   owner: jx-app-org
-  repo: fast-raccoon
-  url: https://github.com/jx-app-org/fast-raccoon.git
+  repo: dashing-goblin
+  url: https://github.com/jx-app-org/dashing-goblin.git
   version: ""
   versionURL: ""
