--- a/dependency-matrix/matrix.yaml
+++ b/dependency-matrix/matrix.yaml
@@ -25,7 +25,7 @@ dependencies:
   versionURL: ""
 - host: github.com
   owner: jx-app-org
-  repo: dashing-goblin
-  url: https://github.com/jx-app-org/dashing-goblin.git
+  repo: first-stallion
+  url: https://github.com/jx-app-org/first-stallion.git
   version: ""
   versionURL: ""
