chore(deps): bump https://github.com/jx-app-org/right-baboon.git
Command run was `jx create quickstart -b -o /var/folders/s2/mtpjlcln1qlf4_p56_9rmj7r0000gn/T/e2e-935349669 --org jx-app-org -p right-baboon -f golang-http --git-public true`

--- a/dependency-matrix/matrix.yaml
+++ b/dependency-matrix/matrix.yaml
@@ -25,7 +25,7 @@ dependencies:
   versionURL: ""
 - host: github.com
   owner: jx-app-org
-  repo: first-stallion
-  url: https://github.com/jx-app-org/first-stallion.git
+  repo: right-baboon
+  url: https://github.com/jx-app-org/right-baboon.git
   version: ""
   versionURL: ""
