chore(deps): bump https://github.com/jx-app-org/mint-prawn.git
Command run was `jx create quickstart -b -o /var/folders/s2/mtpjlcln1qlf4_p56_9rmj7r0000gn/T/e2e-212213153 --org jx-app-org -p mint-prawn -f golang-http --git-public true`

--- a/dependency-matrix/matrix.yaml
+++ b/dependency-matrix/matrix.yaml
@@ -25,7 +25,7 @@ dependencies:
   versionURL: ""
 - host: github.com
   owner: jx-app-org
-  repo: right-baboon
-  url: https://github.com/jx-app-org/right-baboon.git
+  repo: mint-prawn
+  url: https://github.com/jx-app-org/mint-prawn.git
   version: ""
   versionURL: ""
