--- a/dependency-matrix/matrix.yaml
+++ b/dependency-matrix/matrix.yaml
@@ -25,7 +25,7 @@ dependencies:
   versionURL: ""
 - host: github.com
   owner: jx-app-org
-  repo: mint-prawn
-  url: https://github.com/jx-app-org/mint-prawn.git
+  repo: optimal-dane
+  url: https://github.com/jx-app-org/optimal-dane.git
   version: ""
   versionURL: ""
