--- a/dependency-matrix/matrix.yaml
+++ b/dependency-matrix/matrix.yaml
@@ -25,7 +25,7 @@ dependencies:
   versionURL: ""
 - host: github.com
   owner: jx-app-org
-  repo: optimal-dane
-  url: https://github.com/jx-app-org/optimal-dane.git
+  repo: adjusted-bat
+  url: https://github.com/jx-app-org/adjusted-bat.git
   version: ""
   versionURL: ""
