--- a/dependency-matrix/matrix.yaml
+++ b/dependency-matrix/matrix.yaml
@@ -25,7 +25,7 @@ dependencies:
   versionURL: ""
 - host: github.com
   owner: jx-app-org
-  repo: enjoyed-sponge
-  url: https://github.com/jx-app-org/enjoyed-sponge.git
+  repo: solid-glowworm
+  url: https://github.com/jx-app-org/solid-glowworm.git
   version: ""
   versionURL: ""
