--- a/dependency-matrix/matrix.yaml
+++ b/dependency-matrix/matrix.yaml
@@ -25,7 +25,7 @@ dependencies:
   versionURL: ""
 - host: github.com
   owner: jx-app-org
-  repo: solid-glowworm
-  url: https://github.com/jx-app-org/solid-glowworm.git
+  repo: trusting-shrew
+  url: https://github.com/jx-app-org/trusting-shrew.git
   version: ""
   versionURL: ""
