chore(deps): bump https://github.com/jx-app-org/top-bonefish.git
Command run was `jx create quickstart -b -o /var/folders/s2/mtpjlcln1qlf4_p56_9rmj7r0000gn/T/e2e-767809524 --org jx-app-org -p top-bonefish -f golang-http --git-public true`

--- a/dependency-matrix/matrix.yaml
+++ b/dependency-matrix/matrix.yaml
@@ -25,7 +25,7 @@ dependencies:
   versionURL: ""
 - host: github.com
   owner: jx-app-org
-  repo: trusting-shrew
-  url: https://github.com/jx-app-org/trusting-shrew.git
+  repo: top-bonefish
+  url: https://github.com/jx-app-org/top-bonefish.git
   version: ""
   versionURL: ""
