--- a/dependency-matrix/matrix.yaml
+++ b/dependency-matrix/matrix.yaml
@@ -25,7 +25,7 @@ dependencies:
   versionURL: ""
 - host: github.com
   owner: jx-app-org
-  repo: top-bonefish
-  url: https://github.com/jx-app-org/top-bonefish.git
+  repo: precious-gator
+  url: https://github.com/jx-app-org/precious-gator.git
   version: ""
   versionURL: ""
