chore(deps): bump https://github.com/jx-app-org/special-haddock.git
Command run was `jx create quickstart -b -o /var/folders/s2/mtpjlcln1qlf4_p56_9rmj7r0000gn/T/e2e-670338096 --org jx-app-org -p special-haddock -f golang-http --git-public true`

--- a/dependency-matrix/matrix.yaml
+++ b/dependency-matrix/matrix.yaml
@@ -25,7 +25,7 @@ dependencies:
   versionURL: ""
 - host: github.com
   owner: jx-app-org
-  repo: precious-gator
-  url: https://github.com/jx-app-org/precious-gator.git
+  repo: special-haddock
+  url: https://github.com/jx-app-org/special-haddock.git
   version: ""
   versionURL: ""
