chore(deps): bump https://github.com/jx-app-org/top-badger.git
Command run was `jx create quickstart -b -o /var/folders/s2/mtpjlcln1qlf4_p56_9rmj7r0000gn/T/e2e-130501443 --org jx-app-org -p top-badger -f golang-http --git-public true`

--- a/dependency-matrix/matrix.yaml
+++ b/dependency-matrix/matrix.yaml
@@ -25,7 +25,7 @@ dependencies:
   versionURL: ""
 - host: github.com
   owner: jx-app-org
-  repo: special-haddock
-  url: https://github.com/jx-app-org/special-haddock.git
+  repo: top-badger
+  url: https://github.com/jx-app-org/top-badger.git
   version: ""
   versionURL: ""
