--- a/dependency-matrix/matrix.yaml
+++ b/dependency-matrix/matrix.yaml
@@ -25,7 +25,7 @@ dependencies:
   versionURL: ""
 - host: github.com
   owner: jx-app-org
-  repo: top-badger
-  url: https://github.com/jx-app-org/top-badger.git
+  repo: great-turkey
+  url: https://github.com/jx-app-org/great-turkey.git
   version: ""
   versionURL: ""
